# logswise-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GITHUB_REVIEW.md  LICENSE  README.md  SECURITY.md  SUPABASE_SETUP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
docs/: index.html  preview.html  script.js  style.css
src/: chat_handler.rs  cli.rs  enhanced_setup.rs  errors.rs  interactive.rs  main.rs  note_handler.rs  performance.rs  personalization.rs  router.rs  setup.rs  suggestion_handler.rs  types.rs  utils.rs  validation.rs
src/handlers/: chat.rs  help.rs  interactive.rs  mod.rs  note.rs  personalization.rs  setup.rs  suggestion.rs  system.rs
src/services/: ollama.rs  supabase.rs
