[package]
name = "logswise_cli_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dialoguer = "0.11"
colored = "2"
figlet-rs = "0.1.5"
dirs = "5"
tempfile = "3.20.0"
